using autoconf for configuration and installation

--- a/blastx-bare.in
+++ b/blastx-bare.in
@@ -10,14 +10,13 @@
   exit 0
 }
 
-source $(dirname $0)/util.sh
+source @prefix@/lib/util.sh
 source /etc/profile.d/000-modules.sh
 module load ncbi-blast
-module load pigz
 
 QUERY=$1    ; shift
 BLAST_DB=$1 ; shift
 
-OUTPUT=$OUTPUT_DIR/result.gz
+OUTPUT=$OUTPUT_DIR/result
 
-read-from $QUERY | ${TRACE:+tracer} blastn -num_threads ${NSLOTS:-1} -db $BLAST_DB "$@" | write-to $OUTPUT
+${TRACE:+tracer} blastx -query $QUERY -num_threads ${NSLOTS:-1} -db $BLAST_DB "$@" -out $OUTPUT
