--- a/Makefile.in
+++ b/Makefile.in
@@ -14,7 +14,7 @@ SED             = @SED@
 PACKAGE_NAME = @PACKAGE_NAME@
 
 libs =  util.sh
-scripts = blastn blastn-bare blastx blastx-bare strace-analyzer tblastn tblastn-bare
+scripts = blastn blastn-bare blastx blastx-bare strace-analyzer tblastn tblastn-bare vcftools vcftools-recode
 
 sedit = $(SED) -e 's|@libdir[@]|$(libdir)|g' -e 's|@datadir[@]|$(datadir)|g'
 
