--- a/Makefile.in
+++ b/Makefile.in
@@ -2,6 +2,7 @@ prefix      = @prefix@
 exec_prefix = @exec_prefix@
 bindir      = @bindir@
 libdir      = @libdir@
+datarootdir = @datarootdir@
 datadir     = @datadir@
 srcdir      = @srcdir@
 
@@ -14,7 +15,7 @@ SED             = @SED@
 PACKAGE_NAME = @PACKAGE_NAME@
 
 libs =  util.sh
-scripts = blastn blastn-bare blastx blastx-bare strace-analyzer tblastn tblastn-bare vcftools vcftools-recode
+scripts = archiver blastn blastn-bare blastx blastx-bare strace-analyzer tblastn tblastn-bare vcftools vcftools-recode
 
 sedit = $(SED) -e 's|@libdir[@]|$(libdir)|g' -e 's|@datadir[@]|$(datadir)|g'
 
@@ -33,7 +34,7 @@ $(scripts):
 clean:
 	rm -f $(libs) $(scripts)
 
-install:
+install: $(libs) $(scripts)
 	$(INSTALL) -d ${bindir} ${libdir}/$(PACKAGE_NAME) ${datadir}/$(PACKAGE_NAME)
 	$(INSTALL_DATA) $(libs) ${libdir}/$(PACKAGE_NAME)/
 	$(INSTALL_DATA) $(scripts) ${datadir}/$(PACKAGE_NAME)/
