use full-fledged autotools build
- revamps autoconf
- uses automake
- generates modulefile

--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,26 @@
-AC_PREREQ([2.69])
-AC_INIT([submit-scripts], [0.5.0-SNAPSHOT])
+#                                               -*- Autoconf -*-
+# Process this file with autoconf to produce a configure script.
+
+AC_PREREQ([2.63])
+AC_INIT([submit-scripts], [0.5.0-SNAPSHOT], [https://github.com/wookietreiber/submit-scripts/issues])
+
+# Automake invocation.
+AM_INIT_AUTOMAKE([foreign])
+
+# Checks for programs.
+AC_PROG_AWK
 AC_PROG_INSTALL
 AC_PROG_SED
-AC_CONFIG_FILES([Makefile])
+
+# Checks for libraries.
+
+# Checks for header files.
+
+# Checks for typedefs, structures, and compiler characteristics.
+
+# Checks for library functions.
+
+AC_CONFIG_FILES([Makefile
+                 src/Makefile
+                 modulefile])
 AC_OUTPUT
