--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
-autom4te.cache/
-configure
-install-sh
+/aclocal.m4
+/autom4te.cache/
+/autoscan.log
+/configure
+/configure.scan
+/install-sh
+/missing
+Makefile.in
+Makefile
+/config.log
+/config.status
+/modulefile
